--- a/assembler/Cargo.toml
+++ b/assembler/Cargo.toml
@@ -8,6 +8,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 common = { path = "../common" }
+console_error_panic_hook = "0.1.7"
 pest = "2.7.15"
 pest_derive = "2.7.15"
 serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
